# minions

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  deploy.sh  index.html  manifest.json  remote_deploy.sh  serviceWorker.js  tailwind.config.cjs
public/styles/: output.css
src/: lib.rs  main.rs  router.rs
src/browser_api/: crypto.rs  geolocation.rs  html.rs  indexed_db.rs  mod.rs  service_worker.rs
src/key_manager/: key_manager.rs  mod.rs  nostr_id.rs
src/relay_pool/: mod.rs  nostr_relay.rs  relay_pool.rs
src/service_worker/: cargo.toml  lib.rs
src/widgets/: mod.rs
src/widgets/ag_grid/: ag_grid.rs  mod.rs
src/widgets/draggable/: draggable.rs  mod.rs
src/widgets/full_calendar/: full_calendar.rs  mod.rs
src/widgets/leaflet/: leaflet.rs  mod.rs  nominatim.rs
src/widgets/toastify/: mod.rs  toastify.rs
