[package]
name = "minions"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.2.0"

# Nostr Stack
base64 = "0.22.1"
hex = "0.4.3"
nostro2 = "0.1.27"
sha2 = "0.10.8"

# JSON manipulation
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.125"
serde-wasm-bindgen = "0.6.5"

# DOM and Browser Bindings
gloo = "0.11.0"
gloo-events = "0.2.0"
gloo-timers = "0.3.0"
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.70", features = ["HtmlInputElement", "HtmlFormElement", "SubtleCrypto", "CryptoKey", 
"Window", "Crypto", "AesKeyGenParams", "AesGcmParams", "IdbFactory", "IdbOpenDbOptions", "HtmlSelectElement", 
"Clipboard", "IdbOpenDbRequest", "IdbTransaction", "IdbRequest", "IdbDatabase", "IdbObjectStore", "IdbRequestReadyState", 
"Navigator", "HtmlAudioElement", "HtmlMediaElement", "Geolocation", "Response", "ReadableStream", "IdbTransactionMode", 
"IdbObjectStoreParameters", "Navigator", "ServiceWorkerContainer", "FetchEvent", "CustomEvent"] }

# PWA stack
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
